# git-next

./: Cargo.toml  ReadMe.md
crates/gitnext-cli/: Cargo.toml
crates/gitnext-compat/: Cargo.toml
crates/gitnext-core/: Cargo.toml
crates/gitnext-core/proptest-regressions/: lib.txt
crates/gitnext-core/src/: lib.rs
crates/gitnext-identity/: Cargo.toml
crates/gitnext-merge/: Cargo.toml
crates/gitnext-objects/: Cargo.toml
crates/gitnext-objects/src/: lib.rs
crates/gitnext-operations/: Cargo.toml
crates/gitnext-operations/src/: repository.rs
crates/gitnext-protocol/: Cargo.toml
crates/gitnext-query/: Cargo.toml
crates/gitnext-server/: Cargo.toml
crates/gitnext-storage/: Cargo.toml
crates/gitnext-storage-indexeddb/: Cargo.toml
crates/gitnext-storage-memory/: Cargo.toml
crates/gitnext-storage-postgres/: Cargo.toml
crates/gitnext-storage-s3/: Cargo.toml
crates/gitnext-storage-sqlite/: Cargo.toml
crates/gitnext-storage-sqlite/src/: lib.rs
crates/gitnext-storage/src/: lib.rs  memory.rs  sqlite.rs
crates/gitnext-storage/tests/: validation.proptest-regressions  validation.rs
crates/gitnext-wasm/: Cargo.toml
docs/: PRD-GitNext.md  TSD-GitNext.md
docs/validation/: test-matrix.md  validation-report.md
