[package]
name = "gitnext-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
bincode = { workspace = true }

# Crate-specific dependencies
hex = "0.4.3"
sha1 = "0.10.6"

[dev-dependencies]
proptest = { workspace = true }
