[package]
name = "gitnext-operations"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local dependencies
gitnext-core = { path = "../gitnext-core" }
gitnext-storage = { path = "../gitnext-storage" }

# Workspace dependencies
tokio = { workspace = true }
futures = { workspace = true }

# Crate-specific dependencies
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bincode = "1.3"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
gitnext-storage-memory = { path = "../gitnext-storage-memory" }
proptest = "1.0"
tokio-test = "0.4"
