[package]
name = "gitnext-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local dependencies
gitnext-core = { path = "../gitnext-core", features = ["test-utils"] }

# Workspace dependencies
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
proptest = { workspace = true }
tokio-test = "0.4"
sqlx = { workspace = true }
bincode = { workspace = true }
